增加双击切换全屏

--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,12 @@
 			]
 		}
 	],
+	"background": {
+		"scripts": [
+			"./dist/eventPage.js"
+		],
+		"persistent": false
+	},
 	"permissions": [
 		"activeTab",
 		"storage",
