--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/QS20199/better-image-browser#readme",
   "dependencies": {
-    "@types/chrome": "0.0.49"
+    "@types/chrome": "0.0.49",
+    "jquery": "^3.2.1",
+    "toastr": "^2.1.2"
   }
 }
