--- a/manifest.json
+++ b/manifest.json
@@ -21,9 +21,11 @@
 			"js": [
 				"./node_modules/jquery/dist/jquery.min.js",
 				"./node_modules/toastr/build/toastr.min.js",
+				"./dist/lib/context.js",
 				"./dist/index.js"
 			],
 			"css": [
+				"./asset/css/context.standalone.css",
 				"./node_modules/toastr/build/toastr.css"
 			]
 		}
