文件结构调整

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
 		"**/.hg": true,
 		"**/CVS": true,
 		"**/.DS_Store": true,
-		"dist/**/*": true
+		"dist/**/*": true,
+		"src/**/*.js": true,
+		"src/**/*.js.map": true
 	}
 }
