--- a/better-image-browser/manifest.json
+++ b/better-image-browser/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "Better Image Viewer - Like Picasa",
 	"description": "a chrome extension to browse image better",
-	"version": "1.4.1",
+	"version": "1.4.2",
 	"browser_action": {
 		"default_icon": "./asset/img/icon_128.png",
 		"default_title": "Better Image Viewer",
@@ -20,13 +20,9 @@
 				"<all_urls>"
 			],
 			"js": [
-				"./node_modules/jquery/dist/jquery.min.js",
-				"./src/lib/context.js",
-				"./src/index.js"
+				"./src/content.js"
 			],
 			"css": [
-				"./asset/css/context.standalone.css",
-				"./asset/css/toastr.css"
 			]
 		}
 	],
@@ -44,8 +40,7 @@
 		"tabs"
 	],
 	"web_accessible_resources": [
-		"asset/*",
-		"node_modules/*"
+		"asset/*"
 	],
 	"minimum_chrome_version": "50.0"
 }
