--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "better-image-browser",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "a chrome extension to browse image better",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -w"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,17 @@
   "dependencies": {
     "@types/chrome": "0.0.49",
     "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^10.5.2",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
+    "unicode-loader": "^1.0.7",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.1.0"
   }
 }
