--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"lib": ["es6", "dom"],
 		"target": "es6",
-		"module": "commonjs",
+		"module": "none",
 		"moduleResolution": "node",
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
@@ -15,6 +15,6 @@
 		"node_modules"
 	],
 	"include": [
-		"src/**/*"
+		"better-image-browser/src/**/*"
 	]
 }
